Update Missing type and unit test fix