@@ -18,6 +18,7 @@ package au.gov.asd.tac.constellation.views.qualitycontrol.rules;
 import au.gov.asd.tac.constellation.graph.Graph;
 import au.gov.asd.tac.constellation.graph.GraphReadMethods;
 import au.gov.asd.tac.constellation.graph.schema.analytic.concept.AnalyticConcept;
+import org.apache.commons.lang3.StringUtils;
 import org.openide.util.lookup.ServiceProvider;
 
 /**
@@ -55,7 +56,7 @@ public class MissingTypeRule extends QualityControlRule {
         final int typeAttr = AnalyticConcept.VertexAttribute.TYPE.get(graph);
         if (typeAttr != Graph.NOT_FOUND) {
             final String type = graph.getStringValue(typeAttr, vertexId);
-            return type == null || type.isBlank() || type.isEmpty();
+            return StringUtils.isBlank(type);
         }
         return typeAttr == Graph.NOT_FOUND || graph.getObjectValue(typeAttr, vertexId) == null;
     }
